button fix on small screens

--- a/styles.css
+++ b/styles.css
@@ -214,4 +214,9 @@ button {
 
     text-align: center;
   }
+
+  .subscribe button {
+    line-height: 15px;
+    letter-spacing: 0.4px;
+  }
 }
